apps/web-api/web-api-deployment.yml
# define deployment - deployments manage replica sets
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  labels:
      app: web-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      labels:
        app: web-api
# define pod's container
    spec:
      containers:
        - name: web-api
          image: web-api:v1
          ports:
          - containerPort: 1337
